About: A p5.js tropical cyclone simulation game

v20200119a:
    * Partial implementation of SubBasin and DesignationSystem classes
    * Old name list system replaced with DesignationSystem objects to allow more flexible numbering and naming
        > Still WIP and doesn't yet have all the intended flexibility
    * Basins now given a main SubBasin for the implementation of DesignationSystem
        > Other sub-basins such as PAGASA are still planned for a future update
v20200101a:
    * Slight code changes to set up upcoming scale system
v20191231a:
    * Updated South-West Indian Ocean names for the 2021-22 list
    * Some other under-the-hood changes
v20191109a:
    * Fixed season summary track mode including:
        > storms from previous years whose remnants lasted into the relevant year
        > storms from following years whose precursors formed during the relevant year
    * Fixed timelines not updating after the end of the year without having to view a different season's timeline first
    * Fixed out-basin storms being included in damage, deaths, and landfall stats
v20191004a:
    + Added "designations" system for more flexible and robust storm numbering and naming
        > Includes support for secondary (PAGASA-style) names (though currently not implemented)
        > Includes support for designations prior to TC formation (Invests) (Also not yet implemented)
v20191003a:
    + Added "Experimental" simulation mode
        > Currently a normal mode clone with very extreme SSTs
        > Expect it to frequently change as it will be used for testing purposes
    * env-defs.js is now sim-mode-defs.js to better encompass what it is for
    * each simulation mode's wave/ET spawning function is defined in sim-mode-defs.js now instead of directly in the Basin.advanceSim method
    * renamed simulation-mode-related constants
    * out-basin now based on a "subBasin number" and a Basin.subBasins object (partial addition of upcoming sub-basins system)